[package]
name = "program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.9"
borsh = "0.9.1"
borsh-derive = "0.9.1"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"
